// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthVault - upgrade does not modify the state variables 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 164184,
}
`;

exports[`EthVault - upgrade does not modify the state variables 2`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 164992,
}
`;

exports[`EthVault - upgrade does not modify the state variables 3`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 164460,
}
`;

exports[`EthVault - upgrade does not modify the state variables 4`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 165256,
}
`;

exports[`EthVault - upgrade does not modify the state variables 5`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 164280,
}
`;

exports[`EthVault - upgrade works with valid call data 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 76046,
}
`;

exports[`EthVault - upgrade works with valid call data 2`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 76046,
}
`;
